# getactivewindow-x

./: README.md  setup.cfg
getactivewindow/: __init__.py
