[metadata]
name = getactivewindow_x
version = 0.2.1
author = user202729
description = Separate component to get information on the active window in X.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/getactivewindow-x
classifiers =
    Environment :: Plugins
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages =
    getactivewindow
install_requires =
    python-xlib~=0.29
    ewmh~=0.1.6
